Bug 154679 - Unable to scroll with mouse wheel in a spreadsheet with frozen rows
Summary: Unable to scroll with mouse wheel in a spreadsheet with frozen rows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
: 154572 (view as bug list)
Depends on:
Blocks: Scrolling-PageUpDown
  Show dependency treegraph
 
Reported: 2023-04-06 12:51 UTC by Buovjaga
Modified: 2023-04-08 07:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2023-04-06 12:51:06 UTC
1. Open attachment 186097 [details]
2. Try to scroll with mouse wheel focusing on the bottom area

Repro on Windows and Linux, all VCL backends

Bibisected with linux-64-7.6 to f2b97ecf340e1fd714c636060ae09382518a2b46
unmerge default and ScrollType::Drag cases for calc scrollbars
Comment 1 ady 2023-04-06 16:58:59 UTC
FWIW,

STR:
1. Open  attachment 186097 [details] from comment 0.
2. [CTRL]+[END]
3. Move wheel mouse to go _down_ > the main area scrolls _up_ anyway.

When scrolling down, it looks as if the main area starts scrolling down for a split second, but it never actually goes down; it keeps scrolling up on every attempt.
Comment 2 Caolán McNamara 2023-04-07 09:43:02 UTC
ah, I see

tools::Long ScrollBar::DoScroll( tools::Long nNewPos )

had an unconditional

    meScrollType = ScrollType::Drag;

which ScrollAdaptor::DoScroll doesn't, so it was the case that "default" didn't arise in the past so a mouse wheel was handled by ScrollType::Drag after all despite that looking like it was for Drags only

https://gerrit.libreoffice.org/c/core/+/150120
Comment 3 Commit Notification 2023-04-07 10:36:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8bec0ff56c53e80be81a9f463fd1fd21ade33151

tdf#154679 unable to scroll with mouse wheel with frozen rows

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2023-04-07 10:51:45 UTC
That commit never made it to 7.5, so fixed in trunk is sufficient.
Comment 5 Stefan_Lange_KA@T-Online.de 2023-04-08 07:08:36 UTC
*** Bug 154572 has been marked as a duplicate of this bug. ***